// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extrinsic codegen > generates the code in the desired format > /200/CHANGELOG.md 1`] = `
"LendingPools:
  - add_collateral: added
  - add_lender_funds: added
  - create_lending_pool: added
  - expand_loan: added
  - make_repayment: added
  - remove_collateral: added
  - remove_lender_funds: added
  - request_loan: added
  - update_primary_collateral_asset: added
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/common.ts 1`] = `
"export type ChainflipAsset =
  | 'Eth'
  | 'Flip'
  | 'Usdc'
  | 'Dot'
  | 'Btc'
  | 'ArbEth'
  | 'ArbUsdc'
  | 'Usdt'
  | 'Sol'
  | 'SolUsdc'
  | 'HubDot'
  | 'HubUsdt'
  | 'HubUsdc';
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/addCollateral.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsAddCollateral = [
  primaryCollateralAsset: ChainflipAsset | null,
  collateral: Map<{ [key in ChainflipAsset]: {} }, \`\${number}\` | \`0x\${string}\`>,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/addLenderFunds.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsAddLenderFunds = [
  asset: ChainflipAsset,
  amount: \`\${number}\` | \`0x\${string}\`,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/createLendingPool.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsCreateLendingPool = [asset: ChainflipAsset];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/expandLoan.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsExpandLoan = [
  loanId: \`\${number}\` | \`0x\${string}\`,
  extraAmountToBorrow: \`\${number}\` | \`0x\${string}\`,
  extraCollateral: Map<{ [key in ChainflipAsset]: {} }, \`\${number}\` | \`0x\${string}\`>,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/makeRepayment.ts 1`] = `
"export type LendingPoolsMakeRepayment = [
  loanId: \`\${number}\` | \`0x\${string}\`,
  amount: \`\${number}\` | \`0x\${string}\`,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/removeCollateral.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsRemoveCollateral = [
  collateral: Map<{ [key in ChainflipAsset]: {} }, \`\${number}\` | \`0x\${string}\`>,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/removeLenderFunds.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsRemoveLenderFunds = [
  asset: ChainflipAsset,
  amount: \`\${number}\` | \`0x\${string}\` | null,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/requestLoan.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsRequestLoan = [
  loanAsset: ChainflipAsset,
  loanAmount: \`\${number}\` | \`0x\${string}\`,
  primaryCollateralAsset: ChainflipAsset | null,
  extraCollateral: Map<{ [key in ChainflipAsset]: {} }, \`\${number}\` | \`0x\${string}\`>,
];
"
`;

exports[`extrinsic codegen > generates the code in the desired format > /200/lendingPools/updatePrimaryCollateralAsset.ts 1`] = `
"import { type ChainflipAsset } from '../common';

export type LendingPoolsUpdatePrimaryCollateralAsset = [primaryCollateralAsset: ChainflipAsset];
"
`;
